5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4067/executions/1684_1104.log
== SUBMITION (2019-04-29 15:46:46) 
-- CODE:
a = float(input("ponto a: "))
b = float(input("ponto b: "))
c = float(input("ponto c: "))
d = float(input("ponto d: "))
print("Intervalo 1: ",a,",",b)
print("Intervalo 2: ",c,",",d)
if b > a and d > c:
	if (c > a and d < b) or (a > c and b < d):
		print("Ha intersecao")
else:
		print("Nao ha intersecao")
-- EXECUTION TIME:
0.200963
-- TEST CASE 1:
---- input:
1
2
4
5
---- correct output:
Intervalo 1: 1.0 , 2.0
Intervalo 2: 4.0 , 5.0
Nao ha intersecao
---- user output:
ponto a: ponto b: ponto c: ponto d: Intervalo 1:  1.0 , 2.0
Intervalo 2:  4.0 , 5.0
-- TEST CASE 2:
---- input:
1.5
5
2.5
3
---- correct output:
Intervalo 1: 1.5 , 5.0
Intervalo 2: 2.5 , 3.0
Ha intersecao
---- user output:
ponto a: ponto b: ponto c: ponto d: Intervalo 1:  1.5 , 5.0
Intervalo 2:  2.5 , 3.0
Ha intersecao
-- TEST CASE 3:
---- input:
-1
-3
1
3
---- correct output:
Intervalo 1: -1.0 , -3.0
Intervalo 2: 1.0 , 3.0
Entradas invalidas
---- user output:
ponto a: ponto b: ponto c: ponto d: Intervalo 1:  -1.0 , -3.0
Intervalo 2:  1.0 , 3.0
Nao ha intersecao
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:46:52) 
-- CODE:
a = float(input("ponto a: "))
b = float(input("ponto b: "))
c = float(input("ponto c: "))
d = float(input("ponto d: "))
print("Intervalo 1: ",a,",",b)
print("Intervalo 2: ",c,",",d)
if b > a and d > c:
	if (c > a and d < b) or (a > c and b < d):
		print("Ha intersecao")
else:
	print("Nao ha intersecao")
-- OUTPUT:
Intervalo 1:  1.0 , 2.0
Intervalo 2:  4.0 , 5.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:48:04) 
-- CODE:
a = float(input("ponto a: "))
b = float(input("ponto b: "))
c = float(input("ponto c: "))
d = float(input("ponto d: "))
print("Intervalo 1: ",a,",",b)
print("Intervalo 2: ",c,",",d)
if b > a and d > c:
	if (c > a and d < b) or (a > c and b < d):
		print("Ha intersecao")
	else:
		print("Nao ha intersecao")
else:
	print("Nao ha intersecao")
-- OUTPUT:
Intervalo 1:  1.0 , 2.0
Intervalo 2:  4.0 , 5.0
Nao ha intersecao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 15:48:04) 
-- CODE:
a = float(input("ponto a: "))
b = float(input("ponto b: "))
c = float(input("ponto c: "))
d = float(input("ponto d: "))
print("Intervalo 1: ",a,",",b)
print("Intervalo 2: ",c,",",d)
if b > a and d > c:
	if (c > a and d < b) or (a > c and b < d):
		print("Ha intersecao")
	else:
		print("Nao ha intersecao")
else:
	print("Nao ha intersecao")
-- EXECUTION TIME:
0.152164
-- TEST CASE 1:
---- input:
1
2
4
5
---- correct output:
Intervalo 1: 1.0 , 2.0
Intervalo 2: 4.0 , 5.0
Nao ha intersecao
---- user output:
Intervalo 1:  1.0 , 2.0
Intervalo 2:  4.0 , 5.0
Nao ha intersecao
-- TEST CASE 2:
---- input:
1.5
5
2.5
3
---- correct output:
Intervalo 1: 1.5 , 5.0
Intervalo 2: 2.5 , 3.0
Ha intersecao
---- user output:
Intervalo 1:  1.5 , 5.0
Intervalo 2:  2.5 , 3.0
Ha intersecao
-- TEST CASE 3:
---- input:
-1
-3
1
3
---- correct output:
Intervalo 1: -1.0 , -3.0
Intervalo 2: 1.0 , 3.0
Entradas invalidas
---- user output:
Intervalo 1:  -1.0 , -3.0
Intervalo 2:  1.0 , 3.0
Nao ha intersecao
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 15:48:18) 
-- CODE:
a = float(input("ponto a: "))
b = float(input("ponto b: "))
c = float(input("ponto c: "))
d = float(input("ponto d: "))
print("Intervalo 1: ",a,",",b)
print("Intervalo 2: ",c,",",d)
if b > a and d > c:
	if (c > a and d < b) or (a > c and b < d):
		print("Ha intersecao")
	else:
		print("Nao ha intersecao")
else:
	print("Nao ha intersecao")
-- EXECUTION TIME:
0.14303
-- TEST CASE 1:
---- input:
1
2
4
5
---- correct output:
Intervalo 1: 1.0 , 2.0
Intervalo 2: 4.0 , 5.0
Nao ha intersecao
---- user output:
Intervalo 1:  1.0 , 2.0
Intervalo 2:  4.0 , 5.0
Nao ha intersecao
-- TEST CASE 2:
---- input:
1.5
5
2.5
3
---- correct output:
Intervalo 1: 1.5 , 5.0
Intervalo 2: 2.5 , 3.0
Ha intersecao
---- user output:
Intervalo 1:  1.5 , 5.0
Intervalo 2:  2.5 , 3.0
Ha intersecao
-- TEST CASE 3:
---- input:
-1
-3
1
3
---- correct output:
Intervalo 1: -1.0 , -3.0
Intervalo 2: 1.0 , 3.0
Entradas invalidas
---- user output:
Intervalo 1:  -1.0 , -3.0
Intervalo 2:  1.0 , 3.0
Nao ha intersecao
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 15:49:00) 
-- CODE:
a = float(input("ponto a: "))
b = float(input("ponto b: "))
c = float(input("ponto c: "))
d = float(input("ponto d: "))
print("Intervalo 1: ",a,",",b)
print("Intervalo 2: ",c,",",d)
if b > a and d > c:
	if (c > a and d < b) 
		print("Ha intersecao")
	elif (a > c and b < d):
		print("Ha intersecao")
	else:
		print("Nao ha intersecao")
else:
	print("Nao ha intersecao")
-- EXECUTION TIME:
0.19946
-- ERROR:
  File "/home/codebench/codes/1684/1104/main.py", line 8
    if (c > a and d < b) 
                        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:49:01) 
-- CODE:
a = float(input("ponto a: "))
b = float(input("ponto b: "))
c = float(input("ponto c: "))
d = float(input("ponto d: "))
print("Intervalo 1: ",a,",",b)
print("Intervalo 2: ",c,",",d)
if b > a and d > c:
	if (c > a and d < b) 
		print("Ha intersecao")
	elif (a > c and b < d):
		print("Ha intersecao")
	else:
		print("Nao ha intersecao")
else:
	print("Nao ha intersecao")
-- ERROR:
File "XXXX", line 8
    if (c > a and d < b) 
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 15:49:02) 
-- CODE:
a = float(input("ponto a: "))
b = float(input("ponto b: "))
c = float(input("ponto c: "))
d = float(input("ponto d: "))
print("Intervalo 1: ",a,",",b)
print("Intervalo 2: ",c,",",d)
if b > a and d > c:
	if (c > a and d < b) 
		print("Ha intersecao")
	elif (a > c and b < d):
		print("Ha intersecao")
	else:
		print("Nao ha intersecao")
else:
	print("Nao ha intersecao")
-- EXECUTION TIME:
0.136444
-- ERROR:
  File "/home/codebench/codes/1684/1104/main.py", line 8
    if (c > a and d < b) 
                        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 15:49:09) 
-- CODE:
a = float(input("ponto a: "))
b = float(input("ponto b: "))
c = float(input("ponto c: "))
d = float(input("ponto d: "))
print("Intervalo 1: ",a,",",b)
print("Intervalo 2: ",c,",",d)
if b > a and d > c:
	if (c > a and d < b):
		print("Ha intersecao")
	elif (a > c and b < d):
		print("Ha intersecao")
	else:
		print("Nao ha intersecao")
else:
	print("Nao ha intersecao")
-- EXECUTION TIME:
0.137991
-- TEST CASE 1:
---- input:
1
2
4
5
---- correct output:
Intervalo 1: 1.0 , 2.0
Intervalo 2: 4.0 , 5.0
Nao ha intersecao
---- user output:
Intervalo 1:  1.0 , 2.0
Intervalo 2:  4.0 , 5.0
Nao ha intersecao
-- TEST CASE 2:
---- input:
1.5
5
2.5
3
---- correct output:
Intervalo 1: 1.5 , 5.0
Intervalo 2: 2.5 , 3.0
Ha intersecao
---- user output:
Intervalo 1:  1.5 , 5.0
Intervalo 2:  2.5 , 3.0
Ha intersecao
-- TEST CASE 3:
---- input:
-1
-3
1
3
---- correct output:
Intervalo 1: -1.0 , -3.0
Intervalo 2: 1.0 , 3.0
Entradas invalidas
---- user output:
Intervalo 1:  -1.0 , -3.0
Intervalo 2:  1.0 , 3.0
Nao ha intersecao
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:49:09) 
-- CODE:
a = float(input("ponto a: "))
b = float(input("ponto b: "))
c = float(input("ponto c: "))
d = float(input("ponto d: "))
print("Intervalo 1: ",a,",",b)
print("Intervalo 2: ",c,",",d)
if b > a and d > c:
	if (c > a and d < b):
		print("Ha intersecao")
	elif (a > c and b < d):
		print("Ha intersecao")
	else:
		print("Nao ha intersecao")
else:
	print("Nao ha intersecao")
-- OUTPUT:
Intervalo 1:  1.0 , 2.0
Intervalo 2:  4.0 , 5.0
Nao ha intersecao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 16:00:25) 
-- CODE:
a = float(input("ponto a: "))
b = float(input("ponto b: "))
c = float(input("ponto c: "))
d = float(input("ponto d: "))
print("Intervalo 1: ",a,",",b)
print("Intervalo 2: ",c,",",d)
if b > a and d > c:
	if (c > a and d < b):
		print("Ha intersecao")
	elif (a > c and b < d):
		print("Ha intersecao")
	else:
		print("Nao ha intersecao")
else:
	print("Nao ha intersecao")
-- OUTPUT:
Intervalo 1:  1.0 , 2.0
Intervalo 2:  4.0 , 5.0
Nao ha intersecao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 16:00:26) 
-- CODE:
a = float(input("ponto a: "))
b = float(input("ponto b: "))
c = float(input("ponto c: "))
d = float(input("ponto d: "))
print("Intervalo 1: ",a,",",b)
print("Intervalo 2: ",c,",",d)
if b > a and d > c:
	if (c > a and d < b):
		print("Ha intersecao")
	elif (a > c and b < d):
		print("Ha intersecao")
	else:
		print("Nao ha intersecao")
else:
	print("Nao ha intersecao")
-- EXECUTION TIME:
0.207362
-- TEST CASE 1:
---- input:
1
2
4
5
---- correct output:
Intervalo 1: 1.0 , 2.0
Intervalo 2: 4.0 , 5.0
Nao ha intersecao
---- user output:
Intervalo 1:  1.0 , 2.0
Intervalo 2:  4.0 , 5.0
Nao ha intersecao
-- TEST CASE 2:
---- input:
1.5
5
2.5
3
---- correct output:
Intervalo 1: 1.5 , 5.0
Intervalo 2: 2.5 , 3.0
Ha intersecao
---- user output:
Intervalo 1:  1.5 , 5.0
Intervalo 2:  2.5 , 3.0
Ha intersecao
-- TEST CASE 3:
---- input:
-1
-3
1
3
---- correct output:
Intervalo 1: -1.0 , -3.0
Intervalo 2: 1.0 , 3.0
Entradas invalidas
---- user output:
Intervalo 1:  -1.0 , -3.0
Intervalo 2:  1.0 , 3.0
Nao ha intersecao
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 16:00:36) 
-- CODE:
a = float(input("ponto a: "))
b = float(input("ponto b: "))
c = float(input("ponto c: "))
d = float(input("ponto d: "))
print("Intervalo 1: ",a,",",b)
print("Intervalo 2: ",c,",",d)
if b > a and d > c:
	if (c > a and d < b):
		print("Ha intersecao")
	elif (a > c and b < d):
		print("Ha intersecao")
	else:
		print("Nao ha intersecao")
else:
	print("Nao ha intersecao")
-- OUTPUT:
Intervalo 1:  1.0 , 2.0
Intervalo 2:  4.0 , 5.0
Nao ha intersecao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 16:50:11) 
-- CODE:
a = float(input("ponto a: "))
b = float(input("ponto b: "))
c = float(input("ponto c: "))
d = float(input("ponto d: "))
print("Intervalo 1: ",a,",",b)
print("Intervalo 2: ",c,",",d)
if b > a and d > c:
	if (c > a and d < b):
		print("Ha intersecao")
	elif (a > c and b < d):
		print("Ha intersecao")
	else:
		print("Nao ha intersecao")
else:
	print("Nao ha intersecao")
-- OUTPUT:
Intervalo 1:  1.0 , 2.0
Intervalo 2:  4.0 , 5.0
Nao ha intersecao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 16:50:41) 
-- CODE:
a = float(input("ponto a: "))
b = float(input("ponto b: "))
c = float(input("ponto c: "))
d = float(input("ponto d: "))
print("Intervalo 1: ",a,",",b)
print("Intervalo 2: ",c,",",d)
if b > a and d > c:
	if (c > a and d < b):
		print("Ha intersecao")
	elif (a > c and b < d):
		print("Ha intersecao")
	else:
		print("Nao ha intersecao")
	else:
		print("Nao ha intersecao")
-- EXECUTION TIME:
0.165526
-- ERROR:
  File "/home/codebench/codes/1684/1104/main.py", line 14
    else:
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 16:55:52) 
-- CODE:
a = float(input("ponto a: "))
b = float(input("ponto b: "))
c = float(input("ponto c: "))
d = float(input("ponto d: "))
print("Intervalo 1: ",a,",",b)
print("Intervalo 2: ",c,",",d)
if b > a and d > c:
	if (c > a and d < b):
		print("Ha intersecao")
	elif (a > c and b < d):
		print("Ha intersecao")
	else:
		print("Nao ha intersecao")
else:
	print("Nao ha intersecao")
-- EXECUTION TIME:
0.173628
-- TEST CASE 1:
---- input:
1
2
4
5
---- correct output:
Intervalo 1: 1.0 , 2.0
Intervalo 2: 4.0 , 5.0
Nao ha intersecao
---- user output:
Intervalo 1:  1.0 , 2.0
Intervalo 2:  4.0 , 5.0
Nao ha intersecao
-- TEST CASE 2:
---- input:
1.5
5
2.5
3
---- correct output:
Intervalo 1: 1.5 , 5.0
Intervalo 2: 2.5 , 3.0
Ha intersecao
---- user output:
Intervalo 1:  1.5 , 5.0
Intervalo 2:  2.5 , 3.0
Ha intersecao
-- TEST CASE 3:
---- input:
-1
-3
1
3
---- correct output:
Intervalo 1: -1.0 , -3.0
Intervalo 2: 1.0 , 3.0
Entradas invalidas
---- user output:
Intervalo 1:  -1.0 , -3.0
Intervalo 2:  1.0 , 3.0
Nao ha intersecao
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 16:55:54) 
-- CODE:
a = float(input("ponto a: "))
b = float(input("ponto b: "))
c = float(input("ponto c: "))
d = float(input("ponto d: "))
print("Intervalo 1: ",a,",",b)
print("Intervalo 2: ",c,",",d)
if b > a and d > c:
	if (c > a and d < b):
		print("Ha intersecao")
	elif (a > c and b < d):
		print("Ha intersecao")
	else:
		print("Nao ha intersecao")
else:
	print("Nao ha intersecao")
-- EXECUTION TIME:
0.218485
-- TEST CASE 1:
---- input:
1
2
4
5
---- correct output:
Intervalo 1: 1.0 , 2.0
Intervalo 2: 4.0 , 5.0
Nao ha intersecao
---- user output:
Intervalo 1:  1.0 , 2.0
Intervalo 2:  4.0 , 5.0
Nao ha intersecao
-- TEST CASE 2:
---- input:
1.5
5
2.5
3
---- correct output:
Intervalo 1: 1.5 , 5.0
Intervalo 2: 2.5 , 3.0
Ha intersecao
---- user output:
Intervalo 1:  1.5 , 5.0
Intervalo 2:  2.5 , 3.0
Ha intersecao
-- TEST CASE 3:
---- input:
-1
-3
1
3
---- correct output:
Intervalo 1: -1.0 , -3.0
Intervalo 2: 1.0 , 3.0
Entradas invalidas
---- user output:
Intervalo 1:  -1.0 , -3.0
Intervalo 2:  1.0 , 3.0
Nao ha intersecao
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 16:55:54) 
-- CODE:
a = float(input("ponto a: "))
b = float(input("ponto b: "))
c = float(input("ponto c: "))
d = float(input("ponto d: "))
print("Intervalo 1: ",a,",",b)
print("Intervalo 2: ",c,",",d)
if b > a and d > c:
	if (c > a and d < b):
		print("Ha intersecao")
	elif (a > c and b < d):
		print("Ha intersecao")
	else:
		print("Nao ha intersecao")
else:
	print("Nao ha intersecao")
-- EXECUTION TIME:
0.528284
-- TEST CASE 1:
---- input:
1
2
4
5
---- correct output:
Intervalo 1: 1.0 , 2.0
Intervalo 2: 4.0 , 5.0
Nao ha intersecao
---- user output:
Intervalo 1:  1.0 , 2.0
Intervalo 2:  4.0 , 5.0
Nao ha intersecao
-- TEST CASE 2:
---- input:
1.5
5
2.5
3
---- correct output:
Intervalo 1: 1.5 , 5.0
Intervalo 2: 2.5 , 3.0
Ha intersecao
---- user output:
Intervalo 1:  1.5 , 5.0
Intervalo 2:  2.5 , 3.0
Ha intersecao
-- TEST CASE 3:
---- input:
-1
-3
1
3
---- correct output:
Intervalo 1: -1.0 , -3.0
Intervalo 2: 1.0 , 3.0
Entradas invalidas
---- user output:
Intervalo 1:  -1.0 , -3.0
Intervalo 2:  1.0 , 3.0
Nao ha intersecao
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 16:55:54) 
-- CODE:
a = float(input("ponto a: "))
b = float(input("ponto b: "))
c = float(input("ponto c: "))
d = float(input("ponto d: "))
print("Intervalo 1: ",a,",",b)
print("Intervalo 2: ",c,",",d)
if b > a and d > c:
	if (c > a and d < b):
		print("Ha intersecao")
	elif (a > c and b < d):
		print("Ha intersecao")
	else:
		print("Nao ha intersecao")
else:
	print("Nao ha intersecao")
-- EXECUTION TIME:
0.612105
-- TEST CASE 1:
---- input:
1
2
4
5
---- correct output:
Intervalo 1: 1.0 , 2.0
Intervalo 2: 4.0 , 5.0
Nao ha intersecao
---- user output:
Intervalo 1:  1.5 , 5.0
Intervalo 2:  2.5 , 3.0
Ha intersecao
-- TEST CASE 2:
---- input:
1.5
5
2.5
3
---- correct output:
Intervalo 1: 1.5 , 5.0
Intervalo 2: 2.5 , 3.0
Ha intersecao
---- user output:
Intervalo 1:  1.5 , 5.0
Intervalo 2:  2.5 , 3.0
Ha intersecao
-- TEST CASE 3:
---- input:
-1
-3
1
3
---- correct output:
Intervalo 1: -1.0 , -3.0
Intervalo 2: 1.0 , 3.0
Entradas invalidas
---- user output:
Intervalo 1:  -1.0 , -3.0
Intervalo 2:  1.0 , 3.0
Nao ha intersecao
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 16:55:54) 
-- CODE:
a = float(input("ponto a: "))
b = float(input("ponto b: "))
c = float(input("ponto c: "))
d = float(input("ponto d: "))
print("Intervalo 1: ",a,",",b)
print("Intervalo 2: ",c,",",d)
if b > a and d > c:
	if (c > a and d < b):
		print("Ha intersecao")
	elif (a > c and b < d):
		print("Ha intersecao")
	else:
		print("Nao ha intersecao")
else:
	print("Nao ha intersecao")
-- EXECUTION TIME:
0.73216
-- TEST CASE 1:
---- input:
1
2
4
5
---- correct output:
Intervalo 1: 1.0 , 2.0
Intervalo 2: 4.0 , 5.0
Nao ha intersecao
---- user output:
Intervalo 1:  1.5 , 5.0
Intervalo 2:  2.5 , 3.0
Ha intersecao
-- TEST CASE 2:
---- input:
1.5
5
2.5
3
---- correct output:
Intervalo 1: 1.5 , 5.0
Intervalo 2: 2.5 , 3.0
Ha intersecao
---- user output:
Intervalo 1:  1.5 , 5.0
Intervalo 2:  2.5 , 3.0
Ha intersecao
-- TEST CASE 3:
---- input:
-1
-3
1
3
---- correct output:
Intervalo 1: -1.0 , -3.0
Intervalo 2: 1.0 , 3.0
Entradas invalidas
---- user output:
Intervalo 1:  -1.0 , -3.0
Intervalo 2:  1.0 , 3.0
Nao ha intersecao
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 16:55:54) 
-- CODE:
a = float(input("ponto a: "))
b = float(input("ponto b: "))
c = float(input("ponto c: "))
d = float(input("ponto d: "))
print("Intervalo 1: ",a,",",b)
print("Intervalo 2: ",c,",",d)
if b > a and d > c:
	if (c > a and d < b):
		print("Ha intersecao")
	elif (a > c and b < d):
		print("Ha intersecao")
	else:
		print("Nao ha intersecao")
else:
	print("Nao ha intersecao")
-- EXECUTION TIME:
0.780478
-- TEST CASE 1:
---- input:
1
2
4
5
---- correct output:
Intervalo 1: 1.0 , 2.0
Intervalo 2: 4.0 , 5.0
Nao ha intersecao
---- user output:
Intervalo 1:  1.5 , 5.0
Intervalo 2:  2.5 , 3.0
Ha intersecao
-- TEST CASE 2:
---- input:
1.5
5
2.5
3
---- correct output:
Intervalo 1: 1.5 , 5.0
Intervalo 2: 2.5 , 3.0
Ha intersecao
---- user output:
Intervalo 1:  1.5 , 5.0
Intervalo 2:  2.5 , 3.0
Ha intersecao
-- TEST CASE 3:
---- input:
-1
-3
1
3
---- correct output:
Intervalo 1: -1.0 , -3.0
Intervalo 2: 1.0 , 3.0
Entradas invalidas
---- user output:
Intervalo 1:  -1.0 , -3.0
Intervalo 2:  1.0 , 3.0
Nao ha intersecao
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 16:55:54) 
-- CODE:
a = float(input("ponto a: "))
b = float(input("ponto b: "))
c = float(input("ponto c: "))
d = float(input("ponto d: "))
print("Intervalo 1: ",a,",",b)
print("Intervalo 2: ",c,",",d)
if b > a and d > c:
	if (c > a and d < b):
		print("Ha intersecao")
	elif (a > c and b < d):
		print("Ha intersecao")
	else:
		print("Nao ha intersecao")
else:
	print("Nao ha intersecao")
-- EXECUTION TIME:
0.854424
-- TEST CASE 1:
---- input:
1
2
4
5
---- correct output:
Intervalo 1: 1.0 , 2.0
Intervalo 2: 4.0 , 5.0
Nao ha intersecao
---- user output:
Intervalo 1:  1.5 , 5.0
Intervalo 2:  2.5 , 3.0
Ha intersecao
-- TEST CASE 2:
---- input:
1.5
5
2.5
3
---- correct output:
Intervalo 1: 1.5 , 5.0
Intervalo 2: 2.5 , 3.0
Ha intersecao
---- user output:
Intervalo 1:  -1.0 , -3.0
Intervalo 2:  1.0 , 3.0
Nao ha intersecao
-- TEST CASE 3:
---- input:
-1
-3
1
3
---- correct output:
Intervalo 1: -1.0 , -3.0
Intervalo 2: 1.0 , 3.0
Entradas invalidas
---- user output:
Intervalo 1:  1.0 , 2.0
Intervalo 2:  4.0 , 5.0
Nao ha intersecao
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 16:55:56) 
-- CODE:
a = float(input("ponto a: "))
b = float(input("ponto b: "))
c = float(input("ponto c: "))
d = float(input("ponto d: "))
print("Intervalo 1: ",a,",",b)
print("Intervalo 2: ",c,",",d)
if b > a and d > c:
	if (c > a and d < b):
		print("Ha intersecao")
	elif (a > c and b < d):
		print("Ha intersecao")
	else:
		print("Nao ha intersecao")
else:
	print("Nao ha intersecao")
-- EXECUTION TIME:
0.314466
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1684/1104/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 16:55:56) 
-- CODE:
a = float(input("ponto a: "))
b = float(input("ponto b: "))
c = float(input("ponto c: "))
d = float(input("ponto d: "))
print("Intervalo 1: ",a,",",b)
print("Intervalo 2: ",c,",",d)
if b > a and d > c:
	if (c > a and d < b):
		print("Ha intersecao")
	elif (a > c and b < d):
		print("Ha intersecao")
	else:
		print("Nao ha intersecao")
else:
	print("Nao ha intersecao")
-- EXECUTION TIME:
0.297154
-- TEST CASE 1:
---- input:
1
2
4
5
---- correct output:
Intervalo 1: 1.0 , 2.0
Intervalo 2: 4.0 , 5.0
Nao ha intersecao
---- user output:
Intervalo 1:  1.0 , 2.0
Intervalo 2:  4.0 , 5.0
Nao ha intersecao
-- TEST CASE 2:
---- input:
1.5
5
2.5
3
---- correct output:
Intervalo 1: 1.5 , 5.0
Intervalo 2: 2.5 , 3.0
Ha intersecao
---- user output:
Intervalo 1:  1.5 , 5.0
Intervalo 2:  2.5 , 3.0
Ha intersecao
-- TEST CASE 3:
---- input:
-1
-3
1
3
---- correct output:
Intervalo 1: -1.0 , -3.0
Intervalo 2: 1.0 , 3.0
Entradas invalidas
---- user output:
Intervalo 1:  -1.0 , -3.0
Intervalo 2:  1.0 , 3.0
Nao ha intersecao
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 16:55:56) 
-- CODE:
a = float(input("ponto a: "))
b = float(input("ponto b: "))
c = float(input("ponto c: "))
d = float(input("ponto d: "))
print("Intervalo 1: ",a,",",b)
print("Intervalo 2: ",c,",",d)
if b > a and d > c:
	if (c > a and d < b):
		print("Ha intersecao")
	elif (a > c and b < d):
		print("Ha intersecao")
	else:
		print("Nao ha intersecao")
else:
	print("Nao ha intersecao")
-- EXECUTION TIME:
0.376267
-- TEST CASE 1:
---- input:
1
2
4
5
---- correct output:
Intervalo 1: 1.0 , 2.0
Intervalo 2: 4.0 , 5.0
Nao ha intersecao
---- user output:
Intervalo 1:  1.0 , 2.0
Intervalo 2:  4.0 , 5.0
Nao ha intersecao
-- TEST CASE 2:
---- input:
1.5
5
2.5
3
---- correct output:
Intervalo 1: 1.5 , 5.0
Intervalo 2: 2.5 , 3.0
Ha intersecao
---- user output:
Intervalo 1:  1.5 , 5.0
Intervalo 2:  2.5 , 3.0
Ha intersecao
-- TEST CASE 3:
---- input:
-1
-3
1
3
---- correct output:
Intervalo 1: -1.0 , -3.0
Intervalo 2: 1.0 , 3.0
Entradas invalidas
---- user output:
Intervalo 1:  -1.0 , -3.0
Intervalo 2:  1.0 , 3.0
Nao ha intersecao
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 16:55:56) 
-- CODE:
a = float(input("ponto a: "))
b = float(input("ponto b: "))
c = float(input("ponto c: "))
d = float(input("ponto d: "))
print("Intervalo 1: ",a,",",b)
print("Intervalo 2: ",c,",",d)
if b > a and d > c:
	if (c > a and d < b):
		print("Ha intersecao")
	elif (a > c and b < d):
		print("Ha intersecao")
	else:
		print("Nao ha intersecao")
else:
	print("Nao ha intersecao")
-- EXECUTION TIME:
0.51541
-- TEST CASE 1:
---- input:
1
2
4
5
---- correct output:
Intervalo 1: 1.0 , 2.0
Intervalo 2: 4.0 , 5.0
Nao ha intersecao
---- user output:
Intervalo 1:  1.5 , 5.0
Intervalo 2:  2.5 , 3.0
Ha intersecao
-- TEST CASE 2:
---- input:
1.5
5
2.5
3
---- correct output:
Intervalo 1: 1.5 , 5.0
Intervalo 2: 2.5 , 3.0
Ha intersecao
---- user output:
Intervalo 1:  1.5 , 5.0
Intervalo 2:  2.5 , 3.0
Ha intersecao
-- TEST CASE 3:
---- input:
-1
-3
1
3
---- correct output:
Intervalo 1: -1.0 , -3.0
Intervalo 2: 1.0 , 3.0
Entradas invalidas
---- user output:
Intervalo 1:  -1.0 , -3.0
Intervalo 2:  1.0 , 3.0
Nao ha intersecao
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 16:55:56) 
-- CODE:
a = float(input("ponto a: "))
b = float(input("ponto b: "))
c = float(input("ponto c: "))
d = float(input("ponto d: "))
print("Intervalo 1: ",a,",",b)
print("Intervalo 2: ",c,",",d)
if b > a and d > c:
	if (c > a and d < b):
		print("Ha intersecao")
	elif (a > c and b < d):
		print("Ha intersecao")
	else:
		print("Nao ha intersecao")
else:
	print("Nao ha intersecao")
-- EXECUTION TIME:
0.520328
-- TEST CASE 1:
---- input:
1
2
4
5
---- correct output:
Intervalo 1: 1.0 , 2.0
Intervalo 2: 4.0 , 5.0
Nao ha intersecao
---- user output:
Intervalo 1:  1.5 , 5.0
Intervalo 2:  2.5 , 3.0
Ha intersecao
-- TEST CASE 2:
---- input:
1.5
5
2.5
3
---- correct output:
Intervalo 1: 1.5 , 5.0
Intervalo 2: 2.5 , 3.0
Ha intersecao
---- user output:
Intervalo 1:  1.5 , 5.0
Intervalo 2:  2.5 , 3.0
Ha intersecao
-- TEST CASE 3:
---- input:
-1
-3
1
3
---- correct output:
Intervalo 1: -1.0 , -3.0
Intervalo 2: 1.0 , 3.0
Entradas invalidas
---- user output:
Intervalo 1:  -1.0 , -3.0
Intervalo 2:  1.0 , 3.0
Nao ha intersecao
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 16:55:56) 
-- CODE:
a = float(input("ponto a: "))
b = float(input("ponto b: "))
c = float(input("ponto c: "))
d = float(input("ponto d: "))
print("Intervalo 1: ",a,",",b)
print("Intervalo 2: ",c,",",d)
if b > a and d > c:
	if (c > a and d < b):
		print("Ha intersecao")
	elif (a > c and b < d):
		print("Ha intersecao")
	else:
		print("Nao ha intersecao")
else:
	print("Nao ha intersecao")
-- EXECUTION TIME:
0.684201
-- TEST CASE 1:
---- input:
1
2
4
5
---- correct output:
Intervalo 1: 1.0 , 2.0
Intervalo 2: 4.0 , 5.0
Nao ha intersecao
---- user output:
Intervalo 1:  1.5 , 5.0
Intervalo 2:  2.5 , 3.0
Ha intersecao
-- TEST CASE 2:
---- input:
1.5
5
2.5
3
---- correct output:
Intervalo 1: 1.5 , 5.0
Intervalo 2: 2.5 , 3.0
Ha intersecao
---- user output:
Intervalo 1:  -1.0 , -3.0
Intervalo 2:  1.0 , 3.0
Nao ha intersecao
-- TEST CASE 3:
---- input:
-1
-3
1
3
---- correct output:
Intervalo 1: -1.0 , -3.0
Intervalo 2: 1.0 , 3.0
Entradas invalidas
---- user output:
Intervalo 1:  1.0 , 2.0
Intervalo 2:  4.0 , 5.0
Nao ha intersecao
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 16:55:56) 
-- CODE:
a = float(input("ponto a: "))
b = float(input("ponto b: "))
c = float(input("ponto c: "))
d = float(input("ponto d: "))
print("Intervalo 1: ",a,",",b)
print("Intervalo 2: ",c,",",d)
if b > a and d > c:
	if (c > a and d < b):
		print("Ha intersecao")
	elif (a > c and b < d):
		print("Ha intersecao")
	else:
		print("Nao ha intersecao")
else:
	print("Nao ha intersecao")
-- EXECUTION TIME:
0.251088
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1684/1104/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 16:55:57) 
-- CODE:
a = float(input("ponto a: "))
b = float(input("ponto b: "))
c = float(input("ponto c: "))
d = float(input("ponto d: "))
print("Intervalo 1: ",a,",",b)
print("Intervalo 2: ",c,",",d)
if b > a and d > c:
	if (c > a and d < b):
		print("Ha intersecao")
	elif (a > c and b < d):
		print("Ha intersecao")
	else:
		print("Nao ha intersecao")
else:
	print("Nao ha intersecao")
-- EXECUTION TIME:
0.13928
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1684/1104/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 16:58:23) 
-- CODE:
a = float(input("ponto a: "))
b = float(input("ponto b: "))
c = float(input("ponto c: "))
d = float(input("ponto d: "))
print("Intervalo 1: ",a,",",b)
print("Intervalo 2: ",c,",",d)
if b > a and d > c:
	if (a <= d <=b) or (a<= c <= d):
		print("Ha intersecao")
	else:
		print("Nao ha intersecao")
else:
	print("Nao ha intersecao")
-- OUTPUT:
Intervalo 1:  1.0 , 2.0
Intervalo 2:  4.0 , 5.0
Ha intersecao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 16:58:39) 
-- CODE:
a = float(input("ponto a: "))
b = float(input("ponto b: "))
c = float(input("ponto c: "))
d = float(input("ponto d: "))
print("Intervalo 1: ",a,",",b)
print("Intervalo 2: ",c,",",d)
if b > a and d > c:
	if (a <= d <=b) or (a<= c <= d):
		print("Ha intersecao")
	else:
		print("Nao ha intersecao")
else:
	print("Nao ha intersecao")
-- EXECUTION TIME:
0.146438
-- TEST CASE 1:
---- input:
1
2
4
5
---- correct output:
Intervalo 1: 1.0 , 2.0
Intervalo 2: 4.0 , 5.0
Nao ha intersecao
---- user output:
Intervalo 1:  1.0 , 2.0
Intervalo 2:  4.0 , 5.0
Ha intersecao
-- TEST CASE 2:
---- input:
1.5
5
2.5
3
---- correct output:
Intervalo 1: 1.5 , 5.0
Intervalo 2: 2.5 , 3.0
Ha intersecao
---- user output:
Intervalo 1:  1.5 , 5.0
Intervalo 2:  2.5 , 3.0
Ha intersecao
-- TEST CASE 3:
---- input:
-1
-3
1
3
---- correct output:
Intervalo 1: -1.0 , -3.0
Intervalo 2: 1.0 , 3.0
Entradas invalidas
---- user output:
Intervalo 1:  -1.0 , -3.0
Intervalo 2:  1.0 , 3.0
Nao ha intersecao
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 16:59:05) 
-- CODE:
a = float(input("ponto a: "))
b = float(input("ponto b: "))
c = float(input("ponto c: "))
d = float(input("ponto d: "))
print("Intervalo 1: ",a,",",b)
print("Intervalo 2: ",c,",",d)
if b > a and d > c:
	if (a <= d <=b) or (a<= c <= d):
		print("Ha intersecao")
	else:
		print("Nao ha intersecao")
else:
	print("Nao ha intersecao")
-- OUTPUT:
Intervalo 1:  1.0 , 2.0
Intervalo 2:  4.0 , 5.0
Ha intersecao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 16:59:32) 
-- CODE:
a = float(input("ponto a: "))
b = float(input("ponto b: "))
c = float(input("ponto c: "))
d = float(input("ponto d: "))
print("Intervalo 1:",a,",",b)
print("Intervalo 2:",c,",",d)
if b > a and d > c:
	if (a <= d <=b) or (a<= c <= d):
		print("Ha intersecao")
	else:
		print("Nao ha intersecao")
else:
	print("Nao ha intersecao")
-- OUTPUT:
Intervalo 1: 1.0 , 2.0
Intervalo 2: 4.0 , 5.0
Ha intersecao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 16:59:34) 
-- CODE:
a = float(input("ponto a: "))
b = float(input("ponto b: "))
c = float(input("ponto c: "))
d = float(input("ponto d: "))
print("Intervalo 1:",a,",",b)
print("Intervalo 2:",c,",",d)
if b > a and d > c:
	if (a <= d <=b) or (a<= c <= d):
		print("Ha intersecao")
	else:
		print("Nao ha intersecao")
else:
	print("Nao ha intersecao")
-- EXECUTION TIME:
0.13802
-- TEST CASE 1:
---- input:
1
2
4
5
---- correct output:
Intervalo 1: 1.0 , 2.0
Intervalo 2: 4.0 , 5.0
Nao ha intersecao
---- user output:
Intervalo 1: 1.0 , 2.0
Intervalo 2: 4.0 , 5.0
Ha intersecao
-- TEST CASE 2:
---- input:
1.5
5
2.5
3
---- correct output:
Intervalo 1: 1.5 , 5.0
Intervalo 2: 2.5 , 3.0
Ha intersecao
---- user output:
Intervalo 1: 1.5 , 5.0
Intervalo 2: 2.5 , 3.0
Ha intersecao
-- TEST CASE 3:
---- input:
-1
-3
1
3
---- correct output:
Intervalo 1: -1.0 , -3.0
Intervalo 2: 1.0 , 3.0
Entradas invalidas
---- user output:
Intervalo 1: -1.0 , -3.0
Intervalo 2: 1.0 , 3.0
Nao ha intersecao
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 17:00:08) 
-- CODE:
a = float(input("ponto a: "))
b = float(input("ponto b: "))
c = float(input("ponto c: "))
d = float(input("ponto d: "))
print("Intervalo 1:",a,",",b)
print("Intervalo 2:",c,",",d)
if b > a and d > c:
	if (a <= d <=b) or (a<= c <= d):
		print("Ha intersecao")
	else:
		print("Nao ha intersecao")
else:
	print("Nao ha intersecao")
-- OUTPUT:
Intervalo 1: 1.0 , 2.0
Intervalo 2: 4.0 , 5.0
Ha intersecao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 17:01:24) 
-- CODE:
a = float(input("ponto a: "))
b = float(input("ponto b: "))
c = float(input("ponto c: "))
d = float(input("ponto d: "))
print("Intervalo 1:",a,",",b)
print("Intervalo 2:",c,",",d)
if b > a and d > c:
	if (a <= d <=b) or (a<= c <= d):
		print("Ha intersecao")
	else:
		print("Nao ha intersecao")
else:
	print("Entradas invalidas")
-- OUTPUT:
Intervalo 1: 1.0 , 2.0
Intervalo 2: 4.0 , 5.0
Ha intersecao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 17:01:34) 
-- CODE:
a = float(input("ponto a: "))
b = float(input("ponto b: "))
c = float(input("ponto c: "))
d = float(input("ponto d: "))
print("Intervalo 1:",a,",",b)
print("Intervalo 2:",c,",",d)
if b > a and d > c:
	if (a <= d <=b) or (a<= c <= d):
		print("Ha intersecao")
	else:
		print("Nao ha intersecao")
else:
	print("Entradas invalidas")
-- OUTPUT:
Intervalo 1: 1.0 , 2.0
Intervalo 2: 4.0 , 5.0
Ha intersecao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 17:01:46) 
-- CODE:
a = float(input("ponto a: "))
b = float(input("ponto b: "))
c = float(input("ponto c: "))
d = float(input("ponto d: "))
print("Intervalo 1:",a,",",b)
print("Intervalo 2:",c,",",d)
if b > a and d > c:
	if (a <= d <=b) or (a<= c <= d):
		print("Ha intersecao")
	else:
		print("Nao ha intersecao")
else:
	print("Entradas invalidas")
-- EXECUTION TIME:
0.13131
-- TEST CASE 1:
---- input:
1
2
4
5
---- correct output:
Intervalo 1: 1.0 , 2.0
Intervalo 2: 4.0 , 5.0
Nao ha intersecao
---- user output:
Intervalo 1: 1.0 , 2.0
Intervalo 2: 4.0 , 5.0
Ha intersecao
-- TEST CASE 2:
---- input:
1.5
5
2.5
3
---- correct output:
Intervalo 1: 1.5 , 5.0
Intervalo 2: 2.5 , 3.0
Ha intersecao
---- user output:
Intervalo 1: 1.5 , 5.0
Intervalo 2: 2.5 , 3.0
Ha intersecao
-- TEST CASE 3:
---- input:
-1
-3
1
3
---- correct output:
Intervalo 1: -1.0 , -3.0
Intervalo 2: 1.0 , 3.0
Entradas invalidas
---- user output:
Intervalo 1: -1.0 , -3.0
Intervalo 2: 1.0 , 3.0
Entradas invalidas
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 17:02:43) 
-- CODE:
a = float(input("ponto a: "))
b = float(input("ponto b: "))
c = float(input("ponto c: "))
d = float(input("ponto d: "))
print("Intervalo 1:",a,",",b)
print("Intervalo 2:",c,",",d)
if b > a and d > c:
	if (a <= d <=b) or (a<= c <= b):
		print("Ha intersecao")
	else:
		print("Nao ha intersecao")
else:
	print("Entradas invalidas")
-- EXECUTION TIME:
0.166408
-- TEST CASE 1:
---- input:
1
2
4
5
---- correct output:
Intervalo 1: 1.0 , 2.0
Intervalo 2: 4.0 , 5.0
Nao ha intersecao
---- user output:
Intervalo 1: 1.0 , 2.0
Intervalo 2: 4.0 , 5.0
Nao ha intersecao
-- TEST CASE 2:
---- input:
1.5
5
2.5
3
---- correct output:
Intervalo 1: 1.5 , 5.0
Intervalo 2: 2.5 , 3.0
Ha intersecao
---- user output:
Intervalo 1: 1.5 , 5.0
Intervalo 2: 2.5 , 3.0
Ha intersecao
-- TEST CASE 3:
---- input:
-1
-3
1
3
---- correct output:
Intervalo 1: -1.0 , -3.0
Intervalo 2: 1.0 , 3.0
Entradas invalidas
---- user output:
Intervalo 1: -1.0 , -3.0
Intervalo 2: 1.0 , 3.0
Entradas invalidas
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
